[package]
name = "andrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.7.3"
songbird = "0.3.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["client", "standard_framework", "voice"]
